ANTLRWorks/output/CLUBParser.java
// $ANTLR null C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g 2023-05-11 18:40:04

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
@SuppressWarnings("all")
public class CLUBParser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ASSIGN", "BIGGEREQ", "BOOL", 
		"BOOLVAL", "CLASSID", "COMMA", "DECREM", "DIVIDE", "DOT", "EQ", "FOR", 
		"FUNCID", "IF", "INCREM", "INT", "INTVAL", "LARGER", "LCURLY", "LPAREN", 
		"LSQUARE", "METHODID", "MINUS", "MULT", "NOT", "NOTEQ", "OBJID", "OR", 
		"PLUS", "RCURLY", "ROUND", "RPAREN", "RSQUARE", "SEMI", "SETUP", "SMALLER", 
		"SMALLEREQ", "STRING", "STRINGVAL", "TURN", "VARID", "WHILE", "WS"
	};
	public static final int EOF=-1;
	public static final int AND=4;
	public static final int ASSIGN=5;
	public static final int BIGGEREQ=6;
	public static final int BOOL=7;
	public static final int BOOLVAL=8;
	public static final int CLASSID=9;
	public static final int COMMA=10;
	public static final int DECREM=11;
	public static final int DIVIDE=12;
	public static final int DOT=13;
	public static final int EQ=14;
	public static final int FOR=15;
	public static final int FUNCID=16;
	public static final int IF=17;
	public static final int INCREM=18;
	public static final int INT=19;
	public static final int INTVAL=20;
	public static final int LARGER=21;
	public static final int LCURLY=22;
	public static final int LPAREN=23;
	public static final int LSQUARE=24;
	public static final int METHODID=25;
	public static final int MINUS=26;
	public static final int MULT=27;
	public static final int NOT=28;
	public static final int NOTEQ=29;
	public static final int OBJID=30;
	public static final int OR=31;
	public static final int PLUS=32;
	public static final int RCURLY=33;
	public static final int ROUND=34;
	public static final int RPAREN=35;
	public static final int RSQUARE=36;
	public static final int SEMI=37;
	public static final int SETUP=38;
	public static final int SMALLER=39;
	public static final int SMALLEREQ=40;
	public static final int STRING=41;
	public static final int STRINGVAL=42;
	public static final int TURN=43;
	public static final int VARID=44;
	public static final int WHILE=45;
	public static final int WS=46;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "tParams", "params", "exprStmt", "tParam", "iterStmt", 
		"logicOrExpr", "round", "val", "turn", "multExpr", "postfExpr", "stmt", 
		"setup", "unaryExpr", "decl", "program", "funcs", "relatExpr", "assignExpr", 
		"primaryExpr", "type", "func", "stmts", "addExpr", "equalExpr", "expr", 
		"logicAndExpr", "selectStmt"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public CLUBParser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public CLUBParser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this, port, null);

		setDebugListener(proxy);
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
	}

	public CLUBParser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg, new RecognizerSharedState());
	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

	@Override public String[] getTokenNames() { return CLUBParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g"; }



	// $ANTLR start "program"
	// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:3:1: program : setup round turn funcs EOF ;
	public final void program() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "program");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(3, 0);

		try {
			// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:3:9: ( setup round turn funcs EOF )
			dbg.enterAlt(1);

			// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:3:11: setup round turn funcs EOF
			{
			dbg.location(3,11);
			pushFollow(FOLLOW_setup_in_program10);
			setup();
			state._fsp--;
			dbg.location(3,17);
			pushFollow(FOLLOW_round_in_program12);
			round();
			state._fsp--;
			dbg.location(3,23);
			pushFollow(FOLLOW_turn_in_program14);
			turn();
			state._fsp--;
			dbg.location(3,28);
			pushFollow(FOLLOW_funcs_in_program16);
			funcs();
			state._fsp--;
			dbg.location(3,34);
			match(input,EOF,FOLLOW_EOF_in_program18); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(3, 37);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "program");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "program"



	// $ANTLR start "setup"
	// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:4:1: setup : 'Setup' '{' stmts '}' ;
	public final void setup() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "setup");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(4, 0);

		try {
			// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:4:7: ( 'Setup' '{' stmts '}' )
			dbg.enterAlt(1);

			// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:4:9: 'Setup' '{' stmts '}'
			{
			dbg.location(4,9);
			match(input,SETUP,FOLLOW_SETUP_in_setup26); dbg.location(4,17);
			match(input,LCURLY,FOLLOW_LCURLY_in_setup28); dbg.location(4,21);
			pushFollow(FOLLOW_stmts_in_setup30);
			stmts();
			state._fsp--;
			dbg.location(4,27);
			match(input,RCURLY,FOLLOW_RCURLY_in_setup32); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(4, 30);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "setup");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "setup"



	// $ANTLR start "round"
	// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:5:1: round : 'Round' '{' stmts '}' ;
	public final void round() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "round");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(5, 0);

		try {
			// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:5:7: ( 'Round' '{' stmts '}' )
			dbg.enterAlt(1);

			// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:5:9: 'Round' '{' stmts '}'
			{
			dbg.location(5,9);
			match(input,ROUND,FOLLOW_ROUND_in_round40); dbg.location(5,17);
			match(input,LCURLY,FOLLOW_LCURLY_in_round42); dbg.location(5,21);
			pushFollow(FOLLOW_stmts_in_round44);
			stmts();
			state._fsp--;
			dbg.location(5,27);
			match(input,RCURLY,FOLLOW_RCURLY_in_round46); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(5, 30);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "round");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "round"



	// $ANTLR start "turn"
	// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:6:1: turn : ( 'Turn' '(' CLASSID VARID ')' '{' stmts '}' )? ;
	public final void turn() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "turn");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(6, 0);

		try {
			// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:6:6: ( ( 'Turn' '(' CLASSID VARID ')' '{' stmts '}' )? )
			dbg.enterAlt(1);

			// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:6:8: ( 'Turn' '(' CLASSID VARID ')' '{' stmts '}' )?
			{
			dbg.location(6,8);
			// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:6:8: ( 'Turn' '(' CLASSID VARID ')' '{' stmts '}' )?
			int alt1=2;
			try { dbg.enterSubRule(1);
			try { dbg.enterDecision(1, decisionCanBacktrack[1]);

			int LA1_0 = input.LA(1);
			if ( (LA1_0==TURN) ) {
				alt1=1;
			}
			} finally {dbg.exitDecision(1);}

			switch (alt1) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:6:9: 'Turn' '(' CLASSID VARID ')' '{' stmts '}'
					{
					dbg.location(6,9);
					match(input,TURN,FOLLOW_TURN_in_turn55); dbg.location(6,16);
					match(input,LPAREN,FOLLOW_LPAREN_in_turn57); dbg.location(6,20);
					match(input,CLASSID,FOLLOW_CLASSID_in_turn59); dbg.location(6,28);
					match(input,VARID,FOLLOW_VARID_in_turn61); dbg.location(6,34);
					match(input,RPAREN,FOLLOW_RPAREN_in_turn63); dbg.location(6,38);
					match(input,LCURLY,FOLLOW_LCURLY_in_turn65); dbg.location(6,42);
					pushFollow(FOLLOW_stmts_in_turn67);
					stmts();
					state._fsp--;
					dbg.location(6,48);
					match(input,RCURLY,FOLLOW_RCURLY_in_turn69); 
					}
					break;

			}
			} finally {dbg.exitSubRule(1);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(7, 8);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "turn");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "turn"



	// $ANTLR start "funcs"
	// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:8:1: funcs : ( func funcs )? ;
	public final void funcs() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "funcs");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(8, 0);

		try {
			// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:8:7: ( ( func funcs )? )
			dbg.enterAlt(1);

			// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:8:9: ( func funcs )?
			{
			dbg.location(8,9);
			// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:8:9: ( func funcs )?
			int alt2=2;
			try { dbg.enterSubRule(2);
			try { dbg.enterDecision(2, decisionCanBacktrack[2]);

			int LA2_0 = input.LA(1);
			if ( (LA2_0==FUNCID) ) {
				alt2=1;
			}
			} finally {dbg.exitDecision(2);}

			switch (alt2) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:8:10: func funcs
					{
					dbg.location(8,10);
					pushFollow(FOLLOW_func_in_funcs88);
					func();
					state._fsp--;
					dbg.location(8,15);
					pushFollow(FOLLOW_funcs_in_funcs90);
					funcs();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(2);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(9, 8);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "funcs");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "funcs"



	// $ANTLR start "stmts"
	// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:10:1: stmts : ( stmt stmts )? ;
	public final void stmts() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "stmts");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(10, 0);

		try {
			// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:10:7: ( ( stmt stmts )? )
			dbg.enterAlt(1);

			// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:10:9: ( stmt stmts )?
			{
			dbg.location(10,9);
			// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:10:9: ( stmt stmts )?
			int alt3=2;
			try { dbg.enterSubRule(3);
			try { dbg.enterDecision(3, decisionCanBacktrack[3]);

			int LA3_0 = input.LA(1);
			if ( ((LA3_0 >= BOOL && LA3_0 <= CLASSID)||(LA3_0 >= FOR && LA3_0 <= IF)||(LA3_0 >= INT && LA3_0 <= INTVAL)||(LA3_0 >= METHODID && LA3_0 <= MINUS)||LA3_0==NOT||LA3_0==OBJID||(LA3_0 >= STRING && LA3_0 <= STRINGVAL)||(LA3_0 >= VARID && LA3_0 <= WHILE)) ) {
				alt3=1;
			}
			} finally {dbg.exitDecision(3);}

			switch (alt3) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:10:10: stmt stmts
					{
					dbg.location(10,10);
					pushFollow(FOLLOW_stmt_in_stmts109);
					stmt();
					state._fsp--;
					dbg.location(10,15);
					pushFollow(FOLLOW_stmts_in_stmts111);
					stmts();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(3);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(11, 8);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "stmts");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "stmts"



	// $ANTLR start "func"
	// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:12:1: func : FUNCID '(' ( tParams )? ')' '{' stmts '}' ;
	public final void func() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "func");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(12, 0);

		try {
			// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:12:6: ( FUNCID '(' ( tParams )? ')' '{' stmts '}' )
			dbg.enterAlt(1);

			// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:12:8: FUNCID '(' ( tParams )? ')' '{' stmts '}'
			{
			dbg.location(12,8);
			match(input,FUNCID,FOLLOW_FUNCID_in_func130); dbg.location(12,15);
			match(input,LPAREN,FOLLOW_LPAREN_in_func132); dbg.location(12,19);
			// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:12:19: ( tParams )?
			int alt4=2;
			try { dbg.enterSubRule(4);
			try { dbg.enterDecision(4, decisionCanBacktrack[4]);

			int LA4_0 = input.LA(1);
			if ( (LA4_0==BOOL||LA4_0==INT||LA4_0==STRING) ) {
				alt4=1;
			}
			} finally {dbg.exitDecision(4);}

			switch (alt4) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:12:19: tParams
					{
					dbg.location(12,19);
					pushFollow(FOLLOW_tParams_in_func134);
					tParams();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(4);}
			dbg.location(12,28);
			match(input,RPAREN,FOLLOW_RPAREN_in_func137); dbg.location(12,32);
			match(input,LCURLY,FOLLOW_LCURLY_in_func139); dbg.location(12,36);
			pushFollow(FOLLOW_stmts_in_func141);
			stmts();
			state._fsp--;
			dbg.location(12,42);
			match(input,RCURLY,FOLLOW_RCURLY_in_func143); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(13, 9);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "func");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "func"



	// $ANTLR start "tParams"
	// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:14:1: tParams : tParam ( ',' tParams )? ;
	public final void tParams() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "tParams");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(14, 0);

		try {
			// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:14:9: ( tParam ( ',' tParams )? )
			dbg.enterAlt(1);

			// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:14:11: tParam ( ',' tParams )?
			{
			dbg.location(14,11);
			pushFollow(FOLLOW_tParam_in_tParams160);
			tParam();
			state._fsp--;
			dbg.location(14,18);
			// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:14:18: ( ',' tParams )?
			int alt5=2;
			try { dbg.enterSubRule(5);
			try { dbg.enterDecision(5, decisionCanBacktrack[5]);

			int LA5_0 = input.LA(1);
			if ( (LA5_0==COMMA) ) {
				alt5=1;
			}
			} finally {dbg.exitDecision(5);}

			switch (alt5) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:14:19: ',' tParams
					{
					dbg.location(14,19);
					match(input,COMMA,FOLLOW_COMMA_in_tParams163); dbg.location(14,23);
					pushFollow(FOLLOW_tParams_in_tParams165);
					tParams();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(5);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(15, 8);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "tParams");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "tParams"



	// $ANTLR start "stmt"
	// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:16:1: stmt : ( decl ';' | exprStmt ';' | selectStmt | iterStmt );
	public final void stmt() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "stmt");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(16, 0);

		try {
			// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:16:6: ( decl ';' | exprStmt ';' | selectStmt | iterStmt )
			int alt6=4;
			try { dbg.enterDecision(6, decisionCanBacktrack[6]);

			switch ( input.LA(1) ) {
			case BOOL:
			case INT:
			case STRING:
				{
				alt6=1;
				}
				break;
			case BOOLVAL:
			case CLASSID:
			case FUNCID:
			case INTVAL:
			case METHODID:
			case MINUS:
			case NOT:
			case OBJID:
			case STRINGVAL:
			case VARID:
				{
				alt6=2;
				}
				break;
			case IF:
				{
				alt6=3;
				}
				break;
			case FOR:
			case WHILE:
				{
				alt6=4;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}
			} finally {dbg.exitDecision(6);}

			switch (alt6) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:16:8: decl ';'
					{
					dbg.location(16,8);
					pushFollow(FOLLOW_decl_in_stmt183);
					decl();
					state._fsp--;
					dbg.location(16,13);
					match(input,SEMI,FOLLOW_SEMI_in_stmt185); 
					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:17:11: exprStmt ';'
					{
					dbg.location(17,11);
					pushFollow(FOLLOW_exprStmt_in_stmt197);
					exprStmt();
					state._fsp--;
					dbg.location(17,20);
					match(input,SEMI,FOLLOW_SEMI_in_stmt199); 
					}
					break;
				case 3 :
					dbg.enterAlt(3);

					// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:18:11: selectStmt
					{
					dbg.location(18,11);
					pushFollow(FOLLOW_selectStmt_in_stmt211);
					selectStmt();
					state._fsp--;

					}
					break;
				case 4 :
					dbg.enterAlt(4);

					// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:19:11: iterStmt
					{
					dbg.location(19,11);
					pushFollow(FOLLOW_iterStmt_in_stmt223);
					iterStmt();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(20, 8);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "stmt");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "stmt"



	// $ANTLR start "iterStmt"
	// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:21:1: iterStmt : ( 'while' '(' expr ')' '{' stmts '}' | 'for' '(' decl ';' expr ';' postfExpr ')' '{' stmts '}' );
	public final void iterStmt() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "iterStmt");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(21, 0);

		try {
			// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:21:10: ( 'while' '(' expr ')' '{' stmts '}' | 'for' '(' decl ';' expr ';' postfExpr ')' '{' stmts '}' )
			int alt7=2;
			try { dbg.enterDecision(7, decisionCanBacktrack[7]);

			int LA7_0 = input.LA(1);
			if ( (LA7_0==WHILE) ) {
				alt7=1;
			}
			else if ( (LA7_0==FOR) ) {
				alt7=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 7, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}

			} finally {dbg.exitDecision(7);}

			switch (alt7) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:21:12: 'while' '(' expr ')' '{' stmts '}'
					{
					dbg.location(21,12);
					match(input,WHILE,FOLLOW_WHILE_in_iterStmt240); dbg.location(21,20);
					match(input,LPAREN,FOLLOW_LPAREN_in_iterStmt242); dbg.location(21,24);
					pushFollow(FOLLOW_expr_in_iterStmt244);
					expr();
					state._fsp--;
					dbg.location(21,29);
					match(input,RPAREN,FOLLOW_RPAREN_in_iterStmt246); dbg.location(21,33);
					match(input,LCURLY,FOLLOW_LCURLY_in_iterStmt248); dbg.location(21,37);
					pushFollow(FOLLOW_stmts_in_iterStmt250);
					stmts();
					state._fsp--;
					dbg.location(21,43);
					match(input,RCURLY,FOLLOW_RCURLY_in_iterStmt252); 
					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// C:\\Users\\Kira\\Documents\\GitHub\\P4\\ANTLRWorks\\CLUB.g:22:11: 'for' '(' decl ';' expr ';' postfExpr ')' '{' stmts '}'
					{
					dbg.location(22,11);
					match(input,FOR,FOLLOW_FOR_in_iterStmt264); dbg.location(22,17);
					match(input,LPAREN,FOLLOW_LPAREN_in_iterStmt266); dbg.location(22,21);
					pushFollow(FOLLOW_decl_in_iterStmt268);
					decl();
					state._fsp--;
					dbg.location(22,26);
					match(input,SEMI,FOLLOW_SEMI_in_iterStmt270); dbg.location(22,30);
					pushFollow(FOLLOW_expr_in_iterStmt272);
					expr();
					state._fsp--;
					dbg.location(22,35);
					match(input,SEMI,FOLLOW_SEMI_in_iterStmt274); dbg.location(22,39);
					pushFollow(FOLLOW_postfExpr_in_iterStmt276);
					postfExpr();
					state._fsp--;
					dbg.location(22,49);
					match(input,RPAREN,FOLLOW_RPAREN_in_iterStmt278); dbg.location(22,53);
					match(input,LCURLY,FOLLOW_LCURLY_in_iterStmt280); dbg.location(22,57);
					pushFollow(FOLLOW_stmts_in_iterStmt282);
					stmts();
					state._fsp--;
					dbg.location(22,63);
					match(input,RCURLY,FOLLOW_RCURLY_in_iterStmt284); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(23, 8);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "iterStmt");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "iterStmt"



	// $ANTLR start "selectStmt"
